update item qty on hand

--- a/Assigments/index.html
+++ b/Assigments/index.html
@@ -215,10 +215,10 @@
                         <table class="table table-bordered table-hover"id="tblItem">
                             <thead>
                             <tr>
-                                <th scope="col">Item ID</th>
-                                <th scope="col">Item Name</th>
-                                <th scope="col">Item Qty</th>
-                                <th scope="col">Item Price</th>
+                                <th scope="col">#</th>
+                                <th scope="col">First</th>
+                                <th scope="col">Last</th>
+                                <th scope="col">Handle</th>
                             </tr>
                             </thead>
                             <tbody>
@@ -340,7 +340,7 @@
                     </div>
                     <div class="row mb-2">
                         <div class="col-sm-6">
-                            <label for="oQTY" class="form-label">[ Order QTY ] : <label>QTY ON HAND :</label><label id="qtyUpdater">0000</label></label>
+                            <label for="oQTY" class="form-label">Order QTY</label>
                             <input type="text" class="form-control" id="oQTY">
                         </div>
                     </div>
